# GDEFirebase

./: .gitignore  .gitmodules  CMakeLists.txt  gradle.properties  setup.sh
nativeCode/include/: NativeAds.h
nativeCode/src/: NativeAds.cpp
